--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node main.js"
+    "start": "./node_modules/.bin/nodemon --inspect=0.0.0.0:4500 ./bin/onLoopApi"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/register": "^7.17.7",
     "convict": "^6.2.2",
     "dotenv": "^16.0.0",
     "express": "^4.17.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
