--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@babel/register": "^7.17.7",
     "convict": "^6.2.2",
     "dotenv": "^16.0.0",
     "express": "^4.17.3"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/register": "^7.17.7"
   }
 }
