--- a/package.json
+++ b/package.json
@@ -11,11 +11,22 @@
   "dependencies": {
     "convict": "^6.2.2",
     "dotenv": "^16.0.0",
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "express-boom": "^3.0.0",
+    "lodash": "^4.17.21",
+    "validate.js": "^0.13.1",
+    "winston": "^3.6.0",
+    "winston-daily-rotate-file": "^4.6.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15",
     "@babel/preset-env": "^7.16.11",
-    "@babel/register": "^7.17.7"
+    "@babel/register": "^7.17.7",
+    "eslint": "^7.29.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
+    "nodemon": "^2.0.15"
   }
 }
