--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-boom": "^3.0.0",
+    "firebase": "^9.6.10",
     "lodash": "^4.17.21",
     "validate.js": "^0.13.1",
     "winston": "^3.6.0",
