--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "./node_modules/.bin/nodemon --inspect=0.0.0.0:4500 ./bin/onLoopApi"
+    "start": "./node_modules/.bin/nodemon --inspect=0.0.0.0:4500 ./bin/onLoopApi",
+    "test": "mocha --timeout 10000 --require @babel/polyfill --require @babel/register './test/**/*.spec.js'"
   },
   "author": "",
   "license": "ISC",
@@ -20,14 +21,19 @@
     "winston-daily-rotate-file": "^4.6.1"
   },
   "devDependencies": {
+    "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.16.11",
     "@babel/register": "^7.17.7",
+    "chai": "^4.3.6",
+    "chai-http": "^4.3.0",
     "eslint": "^7.29.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "nodemon": "^2.0.15"
+    "mocha": "^9.2.2",
+    "nodemon": "^2.0.15",
+    "should": "^13.2.3"
   }
 }
