--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@babel/register": "^7.17.7",
     "chai": "^4.3.6",
     "chai-http": "^4.3.0",
+    "deep-equal-in-any-order": "^1.1.15",
     "eslint": "^7.29.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.23.4",
