Refactor: updated sample env and README.md

--- a/.env.sample
+++ b/.env.sample
@@ -9,3 +9,7 @@ FIREBASE_STORAGE_BUCKET=
 FIREBASE_MESSAGING_SENDER_ID=
 FIREBASE_APP_ID=
 FIREBASE_MEASUREMENT_ID=
+
+
+LINK_PREVIEW_API_KEY=
+LINK_PREVIEW_API_URL=
